css changes to UI

--- a/client/src/pages/AdminHome.css
+++ b/client/src/pages/AdminHome.css
@@ -1,5 +1,5 @@
 .admin_bg {
-    background-image: url("../assets/formbackground.png");
+    background-image: url("../assets/img/formbackground.png");
     height: 92vh;
     background-position: -6rem;
     background-size: cover;
