--- a/client/src/pages/AdminLogin.css
+++ b/client/src/pages/AdminLogin.css
@@ -1,5 +1,5 @@
 .login_bg {
-    background-image: url("../assets/chatbotmockup.png");
+    background-image: url("../assets/img/chatbotmockup.png");
     height: 92vh;
     background-position: center;
     background-size: cover;
