--- a/client/src/pages/AdminRegister.css
+++ b/client/src/pages/AdminRegister.css
@@ -1,5 +1,5 @@
 .setup_bg {
-    background-image: url("../assets/setup.png");
+    background-image: url("../assets/img/setup.png");
     height: 92vh;
     background-position: center; 
     background-size: cover;
