--- a/client/src/App.css
+++ b/client/src/App.css
@@ -143,6 +143,17 @@ nav.navbar {
   transition:  0.32s ease-in-out;
 }
 
+/************ AdminLogin ************/
+.login_bg {
+  position: absolute;
+  opacity: 0.6;
+  height: 100%;
+  width: 100;
+  mix-blend-mode: normal;
+  min-height: 100vh;
+  position: 
+}
+
 /************ CheckYourPhone ************/
 .congrats-card {
   color: whitesmoke;
