--- a/client/src/App.css
+++ b/client/src/App.css
@@ -33,7 +33,6 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
 
 html {
@@ -135,8 +134,6 @@ p.danger {
 .adminNavBar {
   padding: 0;
   background-color: #DBD0DD !important;
-
-  
 }
 
 /************ User NavBar ************/
@@ -147,13 +144,11 @@ p.danger {
 }
 
 /************ AdminLogin ************/
-.login_bg {
-  position: absolute;
-  opacity: 0.6;
-  height: 100%;
-  width: 100;
-  mix-blend-mode: normal;
+.admin_bg {
   min-height: 100vh;
+  background-image: url('./assets/img/adminbackground.png');
+  background-size: cover;
+  background-position-x: -100px;
 }
 
 /************ CheckYourPhone ************/
