--- a/client/src/App.css
+++ b/client/src/App.css
@@ -33,17 +33,21 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 html {
   scroll-behavior: smooth;
-  scroll-padding-top: 75px;
+}
+
+body::-webkit-scrollbar {
+  display: none;
 }
 
 body {
-  font-weight: 400;
-  overflow-x: hidden;
-  position: relative;
+  margin:0px;
+  padding: 0px;
+  background-color: #ffffff;
   color: #4C455F !important;
   font-family: 'Sofia Pro Light' !important;
 }
@@ -106,30 +110,6 @@ img {
   height: auto;
 }
 
-button {
-  border: 0;
-  background-color: transparent;
-}
-
-input:focus, textarea:focus, select:focus {
-  outline: none;
-}
-
-@media (min-width:1700px) {
-  main .container {
-    max-width: 100%;
-    padding: 0 150px;
-  }
-}
-
-p.success {
-  color: green;
-}
-
-p.danger {
-  color: red;
-}
-
 /************ Admin NavBar ************/
 .adminNavBar {
   padding: 0;
@@ -137,10 +117,28 @@ p.danger {
 }
 
 /************ User NavBar ************/
+.landing-page-video {
+  object-fit: fill;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  overflow-x: hidden;
+  position: fixed;
+  top: 0; right: 0; bottom: 0; left: 0;
+  overflow: hidden;
+}
+
 .userNavBar {
-  padding: 0;
   background-color: #DBD0DD !important;
   border-radius: 10px;
+}
+
+.userNavBar:hover {
+  box-shadow: 5px 10px 30px #7C6682;
+}
+
+Nav.Link:hover {
+  text-shadow: #ffffff;
 }
 
 /************ AdminLogin ************/
@@ -157,22 +155,3 @@ p.danger {
   text-shadow: 0 0 3px #4C455F , 0 0 5px #4C455F
 }
 
-.btn .btn-primary {
-  background-color: #4C455F;
-}
-
-.landing-page-video {
-  object-fit: fill;
-  position: fixed;
-  top: 0; right: 0; bottom: 0; left: 0;
-  overflow: hidden;
-}
-
-.login_bg {
-  background-image: url('./assets/img/setup.png');
-  height: 92vh;
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  overflow-x: hidden;
-}
